Added logs in ProductService class